# fsi-multi-agent

./: .gitignore  CLAUDE.md  FINAL_TESTING_SUMMARY.md  README.md  TASKS.md  UX_FIXES_SUMMARY.md  check_finnhub_plan.py  debug_finnhub.py  env.example  test_agent_function.py  test_claim_data.json  test_claims_quick.py  test_dotenv.py  test_legal_document_analysis.py  test_legal_quick.py  test_mesh_swarm_financial_research.py  test_mesh_swarm_quick.py  test_migrated_loan_system.py  test_results_mesh_swarm_summary.md  test_sequential_claims_adjudication.py
Finance-assistant-swarm-agent/: SwarmAgentArchitectureDescription.ipynb  SwarmAgentArchitectureDescription.py  __init__.py  company_analysis_agent.py  finance_assistant_swarm.py  finance_assistant_swarm_final_fixed.py  finance_assistant_swarm_iteration1.py  finance_assistant_swarm_iteration2.py  finance_assistant_swarm_iteration3.py  finance_assistant_swarm_synchronized.py  financial_metrics_agent.py  pyproject.toml  simple_test.py  stock_price_agent.py  test_multiple_stocks.py
Finance-assistant-swarm-agent/.ipynb_checkpoints/: SwarmAgentArchitectureDescription-checkpoint.ipynb
WorkFlow_ClaimsAdjudication/: ClaimsAdjudication_SequentialPattern-backup.ipynb  ClaimsAdjudication_SequentialPattern.ipynb  ClaimsAdjudication_SequentialPattern.py  requirements.txt
documentation/: 00-CONTEXT-INDEX.md  01-DEVELOPMENT-STATUS.md  3rdPartyData.md  COORDINATION_PATTERNS.md  DESIGN_PRINCIPLES.md  IMPLEMENTATION_EXAMPLES.md  INTRODUCTION_TO_AGENTIC_AI.md  LEARNING_PATH.md  LEARNING_RESOURCES.md  PRD.md  README.html  TASKS.md  tmp.md  (+4 more)
(+51 files in other folders)
