[project]
name = "08-finance-assistant-swarm-agent"
version = "0.1.0"
description = "Finance-Assistant Swarm Agent Collaboration is a modular, multi-agent system designed to autonomously generate comprehensive equity research reports from a single stock query."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # STRANDS AGENTS SDK (TOP PRIORITY) - Primary multi-agent framework
    "strands-agents>=0.1.7",
    "strands-agents-tools>=0.1.5",
    
    # AWS Integration (for Strands SDK Bedrock backend)
    "boto3>=1.38.36",
    "botocore>=1.31.0",
    "aws-requests-auth>=0.4.3",
    
    # Financial Data APIs (integrated through Strands tools)
    "finnhub-python>=2.4.18",
    
    # Data Processing & Configuration
    "pandas>=2.3.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "python-dateutil>=2.8.0",
    
    # Document Processing & Web Intelligence
    "PyPDF2>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.4",
    
    # Analysis & Visualization
    "textblob>=0.19.0",
    "pillow>=11.2.1",
    "coloredlogs>=15.0.0",
    "frozendict>=2.4.6",
]
